[project]
name = "vtt-to-txt"
version = "0.3.0"
description = "VTT file toolkit - convert and analyze WebVTT files"
requires-python = ">=3.14"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
vtt = "vtt:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"  # ruff: keep py313 compat syntax until mypy supports PEP 695/758
exclude = [".venv"]
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = ["UP040"]  # TypeAlias style — mypy doesn't support PEP 695 yet

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
exclude = ["build"]

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true
